# MCPAuthPrototype

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_ROADMAP.md  PRD_Secure_MCP_Server_Prototype.md  README.md  pyproject.toml
.claude/commands/: nextstep.md
.github/workflows/: ci.yaml
argocd/: application.yaml
docs/: PHASE_5_GCP_SETUP.md
documents/: confidential.md  public.md
helm/mcp-server/: Chart.yaml  values-dev.yaml  values.yaml
helm/mcp-server/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  externalsecret.yaml  secretstore.yaml  service.yaml  serviceaccount.yaml
scripts/: __init__.py  generate_token.py
src/: __init__.py  auth.py  config.py  server.py  tools.py
terraform/: artifact-registry.tf  github-wif.tf  gke.tf  iam.tf  main.tf  outputs.tf  secret-manager.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py  test_auth.py  test_tools.py
